snapcast (0.22.0-1) unstable; urgency=medium

  * Features
    -Server: Add Meta stream source (Issue #402, #569, #666)
  * Bugfixes
    -Add missing define for alsa stream to makefile (Issue #692)
    -Fix playback when plugging the headset on Android (Issue #699)
  * General
    -Less verbose logging during pipe reconnects (Issue #696)
    -Add null encoder for streams used only as input for meta streams
    -Snapweb: Change latency range to [-10s, 10s] (Issue #695)

 -- Johannes Pohl <snapcast@badaix.de>  Wed, 30 Sep 2020 00:13:37 +0200

snapcast (0.21.0-1) unstable; urgency=medium

  * Features
    -Server: Support for WebSocket streaming clients
    -Server: Install Snapweb web client (Issue #579)
    -Server: Resample input to 48000:16:2 when using opus codec
    -Server: Add Alsa stream source
  * Bugfixes
    -make install will setup the snapserver home dir (Issue #643)
    -Client retries to open a blocked alsa device (Issue #652)
  * General
    -debian packag generation switched from make to CMake buildsystem
    -Reintroduce MACOS define, hopefully not breaking anything on macOS
    -Snapcast uses GitHub actions for automated CI/CD
    -CMake installs man files (Issue #507)
    -Update documentation (Issue #615, #617)

 -- Johannes Pohl <snapcast@badaix.de>  Sun, 13 Sep 2020 00:13:37 +0200

snapcast (0.20.0-1) unstable; urgency=medium

  * Features
    -Client: Windows support (Issue #24)
    -Client: add hardware mixer (Issue #318)
    -Client: add "script" and "none" mixer (Issue #302)
    -Client: add sharingmode for audio device (if supported)
    -Logging: configurable sink and filters (Issue #30, #561, #122, #559)
    -Librespot: add option "disable-audio-cache=[false|true]"
  * Bugfixes
    -Fix build failure on FreeBSD (Issue #565)
    -Fix calling lsb_release multiple times (Issue #470)
    -Client: high CPU load and crash during playback (Issue #609, #628)
    -Client: improved handling of USB audio disconnects (Issue #64)