@@ -46,6 +46,9 @@ latency of the PCM device
 \fB--sampleformat arg\fR
 resample audio stream to <rate>:<bits>:<channels>
 .TP
+\fB--player arg (=alsa)\fR
+alsa|file[:<options>|?]
+.TP
 \fB--mixer arg (=software)\fR
 software|hardware|script|none|?[:<options>]
 .TP
