@@ -2,6 +2,7 @@ snapcast (0.22.0-1) unstable; urgency=medium
 
   * Features
     -Server: Add Meta stream source (Issue #402, #569, #666)
+    -Client: Add file audio backend (Issue #681)
   * Bugfixes
     -Add missing define for alsa stream to makefile (Issue #692)
     -Fix playback when plugging the headset on Android (Issue #699)
@@ -10,7 +11,7 @@ snapcast (0.22.0-1) unstable; urgency=medium
     -Add null encoder for streams used only as input for meta streams
     -Snapweb: Change latency range to [-10s, 10s] (Issue #695)
 
- -- Johannes Pohl <snapcast@badaix.de>  Wed, 30 Sep 2020 00:13:37 +0200
+ -- Johannes Pohl <snapcast@badaix.de>  Sun, 11 Oct 2020 00:13:37 +0200
 
 snapcast (0.21.0-1) unstable; urgency=medium
 
